--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
               <button type="button" class="button-search"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
           </div>
 
+          <div class="map">
+
+
 
           <div class="search-form">
             <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
@@ -182,11 +185,11 @@
 
               <p class="appointment-item">
                 <label for="appointment-form-adults" class="please">Взрослые:</label>
-                <!-- <button class="btn-minus-icon" type="button"> -->
+                <button class="btn-minus-icon" type="button">
               <span class="visually-hidden">Уменьшаем количество взрослых</span>
             </button>
                 <input class="input-field days" type="text" name="adults" value="" placeholder="2" id="appointment-form-adults">
-                <!-- <button class="btn-plus-icon" type="button"> -->
+                <button class="btn-plus-icon" type="button">
               <span class="visually-hidden">Увеличиваем количество взрослых</span>
             </button>
               </p>
@@ -196,11 +199,11 @@
 
               <p class="appointment-item">
                 <label for="appointment-form-children" class="please">Дети:</label>
-                <!-- <button class="btn-minus-icon" type="button"> -->
+                 <button class="btn-minus-icon" type="button">
               <span class="visually-hidden">Уменьшаем количество детей</span>
             </button>
                 <input class="input-field days" type="text" name="children" value="" placeholder="0" id="appointment-form-children">
-                <!-- <button class="btn-plus-icon" type="button"> -->
+                <button class="btn-plus-icon" type="button">
               <span class="visually-hidden">Увеличиваем количество детей</span>
             </button>
 
@@ -210,6 +213,7 @@
 
               <button class="button-blue" type="submit" > Найти </button>
             </form>
+          </div>
           </div>
 
         </section>
