--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <h1 class="visually">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
 
-            <h2 class="visually-features">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</h2>
+            <h2 class="visually-features">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
 
           </div>
 
