--- a/index.html
+++ b/index.html
@@ -147,11 +147,14 @@
             <p class="booking-info">
               Укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне.
             </p>
-            <button type="button" class="button-search"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+            <button type="button" class="button-search close-search"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
           </div>
 
           <div class="map">
-
+            <div class="interactive-map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d838162.8410384329!2d-111.795138!3d34.854378!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1537998469644" width="100%" height="593" frameborder="0" style="border:0" allowfullscreen>
+              </iframe>
+            </div>
             <div class="search-form">
               <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
 
@@ -267,6 +270,9 @@
 
     </footer>
   </div>
+  <script src="js/js.min.style.js">
+  </script>
+
 </body>
 
 </html>
